--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
 	<body>
 	<div class="mainbod">
 		<div class="mainnav">
-			<div class="header navheader">
+			<div class="header navheader bgtheme fschange colortheme">
 				<div class="pos-f-t">
   <nav class="navbar navbar-inverse">
-	  <span class="navtext">Navbar</span>
+	  <span class="navtext">IdiChats</span>
     <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -32,7 +32,7 @@
 					<hr class="navhr">
 					<div class="collapse" id="navbarToggleExternalContent">
     <div class="p-4">
-      <h4>Settings</h4>
+      <h4 class="fschange">Settings</h4>
       <span>Change colour theme<br><br>
 		  <button class="themebtn lbluetheme" id="lbtheme"></button> 
 		  <button class="themebtn dbluetheme" id="dbtheme"></button> 
@@ -47,8 +47,7 @@
 		  <button class="themebtn dgreentheme" id="dgtheme"></button> 
 		  <button class="themebtn orangetheme" id="otheme"></button> 
 		  <button class="themebtn yellowtheme" id="ytheme"></button>
-		  <button class="themebtn redtheme" id="rtheme"></button> </span><br><br>
-		</span><br><br>
+		  <button class="themebtn redtheme" id="rtheme"></button></span><br><br><br><br>
 		<span>Customize font<br><br>
 			<button class="themebtn btn-warning changetheme fontt productsans" id="psans">Product Sans</button> 
 			<button class="themebtn btn-warning changetheme fontt opensans" id="osans">Open Sans</button> 
@@ -60,7 +59,7 @@
 			<button class="themebtn btn-warning changetheme fontt ptsans" id="ptsans">PT Sans</button> 
 			<button class="themebtn btn-warning changetheme fontt sourcesans" id="ssans">Source Sans Pro</button><br><br>
                    <div class="input-group">
-                     <input type="text" class="form-control" placeholder="Type a value" id="pxval">
+                     <input type="text" class="form-control" placeholder="Type a value" id="pxval" onchange="fontsize()">
                      <span class="input-group-btn">
                        <button class="btn btn-secondary" type="button" id="probtn">Px</button>
                      </span>
@@ -70,7 +69,10 @@
 			<button class="themebtn greytheme colorbtn" id="gcolor"></button>
 			<button class="themebtn darktheme colorbtn" id="dcolor"></button> 
 			<button class="themebtn colorbtn" id="bcolor"></button>
-		</span>
+		</span><br><br><br><br>
+		<span>Wanna reset all the settings?<br><br>
+						<button class="themebtn btn-danger changetheme fontt" id="resetbtn">Click Here Bruh!</button>
+						</span>
     </div>
   </div>
 </div>
@@ -82,12 +84,22 @@
 	<script src="index.js"></script>
 		</div>
 		<div class="mainchat">
-			<div class="header">You are chatting with '%%client%%'</div>
+			<div class="header bgtheme fschange colortheme">You are chatting with '%%client%%'</div>
 			<div class="chathead">
-			<div class="chatbox" id="messages"></div>
-			<div class="chatinput">
-			<div class="col-lg-6">
-                   <div class="input-group">
+			<div class="chatbox" id="messages">
+				<div class="messageheads fschange bgtheme colortheme" id="receivedmessage">Hey there! wazzup?</div><br><br><br>
+				<div class="messageheads fschange bgtheme colortheme" id="sentmessage">nothing...</div><br><br><br>
+				<div class="messageheads fschange bgtheme colortheme" id="receivedmessage">Hey there! wazzup?</div><br><br><br>
+				<div class="messageheads fschange bgtheme colortheme" id="receivedmessage">Hey there! wazzup?</div><br><br><br>
+				<div class="messageheads fschange bgtheme colortheme" id="sentmessage">nothing...</div><br><br><br>
+				<div class="messageheads fschange bgtheme colortheme" id="receivedmessage">This handout will help you understand how paragraphs are formed, how to develop stronger paragraphs, and how to completely and clearly express your ideas.</div><br><br><br>
+				<div class="messageheads fschange bgtheme colortheme" id="sentmessage">This handout will help you understand how paragraphs are formed, how to develop stronger paragraphs, and how to completely and clearly express your ideas.</div><br><br><br>
+				<div class="messageheads fschange bgtheme colortheme" id="sentmessage">Paragraphs are the building blocks of papers. Many students define paragraphs in terms of length: a paragraph is a group of at least five sentences, a paragraph is half a page long, etc. In reality, though, the unity and coherence of ideas among sentences is what constitutes a paragraph. A paragraph is defined as “a group of sentences or a single sentence that forms a unit” (Lunsford and Connors 116). Length and appearance do not determine whether a section in a paper is a paragraph. For instance, in some styles of writing, particularly journalistic styles, a paragraph can be just one sentence long. Ultimately, a paragraph is a sentence or group of sentences that support one main idea. In this handout, we will refer to this as the “controlling idea,” because it controls what happens in the rest of the paragraph. sent by Yuv</div><br><br><br>
+				<div class="messageheads fschange bgtheme colortheme" id="receivedmessage">Paragraphs are the building blocks of papers. Many students define paragraphs in terms of length: a paragraph is a group of at least five sentences, a paragraph is half a page long, etc. In reality, though, the unity and coherence of ideas among sentences is what constitutes a paragraph. A paragraph is defined as “a group of sentences or a single sentence that forms a unit” (Lunsford and Connors 116). Length and appearance do not determine whether a section in a paper is a paragraph. For instance, in some styles of writing, particularly journalistic styles, a paragraph can be just one sentence long. Ultimately, a paragraph is a sentence or group of sentences that support one main idea. In this handout, we will refer to this as the “controlling idea,” because it controls what happens in the rest of the paragraph.</div><br><br><br>
+				</div>
+			<div class="chatinput bgtheme fschange colortheme">
+			<div class="col-lg-12">
+                   <div class="input-group input-group-lg">
                      <input type="text" class="form-control" placeholder="Send a message">
                      <span class="input-group-btn">
                        <button class="btn btn-success" type="button">Go!</button>
