--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<title>Welcome to .....</title>
 	<meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="stylesheet" href="https://www.w3schools.com/lib/w3.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
     <link href='https://fonts.googleapis.com/css?family=Product+Sans:400,400i,700,700i' rel='stylesheet' type='text/css'>
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
@@ -14,7 +15,6 @@
     <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Josefin+Sans" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet">
-    <link rel="stylesheet" href="https://www.w3schools.com/lib/w3.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<link rel="stylesheet" href="index.css">
 	</head>
@@ -58,12 +58,23 @@
 			<button class="themebtn btn-warning changetheme fontt josefinsans" id="jose">Josefin Sans</button> 
 			<button class="themebtn btn-warning changetheme fontt ptsans" id="ptsans">PT Sans</button> 
 			<button class="themebtn btn-warning changetheme fontt sourcesans" id="ssans">Source Sans Pro</button><br><br>
-                   <div class="input-group">
-                     <input type="text" class="form-control" placeholder="Type a value" id="pxval" onchange="fontsize()">
-                     <span class="input-group-btn">
-                       <button class="btn btn-secondary" type="button" id="probtn">Px</button>
-                     </span>
-                   </div><br><br>
+            <select onchange="fscha(this);">
+             <option>10px</option>
+             <option>12px</option>
+             <option>15px</option>
+             <option>16px</option>
+             <option>18px</option>
+             <option>20px</option>
+             <option>22px</option>
+             <option>24px</option>
+             <option>26px</option>
+             <option>28px</option>
+             <option>30px</option>
+             <option>100px</option>
+           </select><br><br>
+			<i><b>Note:</b> 15px is the default value.</i>
+	<script src="index.js"></script>
+			<br><br>
 			<button class="themebtn whitetheme colorbtn" id="wcolor"></button> 
 			<button class="themebtn gwhitetheme colorbtn" id="gwcolor"></button> 
 			<button class="themebtn greytheme colorbtn" id="gcolor"></button>
@@ -102,7 +113,7 @@
                    <div class="input-group input-group-lg">
                      <input type="text" class="form-control" placeholder="Send a message">
                      <span class="input-group-btn">
-                       <button class="btn btn-success" type="button">Go!</button>
+                       <button class="btn btn-success fschange" type="button">Go!</button>
                      </span>
                    </div>
                  </div>
