--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 			<div class="header navheader bgtheme fschange colortheme">
 				<div class="pos-f-t">
   <nav class="navbar navbar-inverse">
-	  <span class="navtext">IdiChats</span>
+	  <span class="navtext fschange colortheme">IdiChats</span>
     <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -32,7 +32,7 @@
 					<hr class="navhr">
 					<div class="collapse" id="navbarToggleExternalContent">
     <div class="p-4">
-      <h4 class="fschange">Settings</h4>
+      <h4 class="fschange colortheme seth">Settings</h4>
       <span>Change colour theme<br><br>
 		  <button class="themebtn lbluetheme" id="lbtheme"></button> 
 		  <button class="themebtn dbluetheme" id="dbtheme"></button> 
@@ -73,7 +73,6 @@
              <option>100px</option>
            </select><br><br>
 			<i><b>Note:</b> 15px is the default value.</i>
-	<script src="index.js"></script>
 			<br><br>
 			<button class="themebtn whitetheme colorbtn" id="wcolor"></button> 
 			<button class="themebtn gwhitetheme colorbtn" id="gwcolor"></button> 
